--- a/async1/index.html
+++ b/async1/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <header><h2>JS17 - ASYNC-1</h2></header>
-    <script src="1-intro.js"></script>
+    <script src="3-fetchAPI.js"></script>
   </body>
 </html>
