--- a/async1/index.html
+++ b/async1/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <header><h2>JS17 - ASYNC-1</h2></header>
+    <section id="users">
+
+    </section>
     <script src="3-fetchAPI.js"></script>
   </body>
 </html>
