--- a/js_modules/browser_es_modules/index.html
+++ b/js_modules/browser_es_modules/index.html
@@ -8,5 +8,8 @@
   </head>
   <body>
     <header><h2>ES-Modules</h2></header>
+
+
+    <script src="app.js" type="module"></script>
   </body>
 </html>
