--- a/function.html
+++ b/function.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./function.js"></script>
+   
+    <script src="./sampleFunctions.js"></script>
+    <!-- <script src="./function.js"></script> -->
     <title>Document</title>
 </head>
 <body>
