--- a/array.html
+++ b/array.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>array</title>
 </head>
+<h1>Arrays(diziler)</h1>
 <body>
  <script src="./array.js"></script>   
 </body>
