--- a/class-notes/js12_dom-intro/index.html
+++ b/class-notes/js12_dom-intro/index.html
@@ -13,7 +13,7 @@
     <main>
       <section class="add-item">
         <h2 id="add-new-item">ADD NEW ITEM</h2>
-        <input id="input" type="text" />
+        <input title="input" id="input" type="text" />
         <input id="btn" type="button" value="ADD" />
       </section>
       <section class="item-list">
