--- a/Javascript_assigments/dom-assigment-3/index.html
+++ b/Javascript_assigments/dom-assigment-3/index.html
@@ -11,9 +11,9 @@
       crossorigin="anonymous"
     />
   </head>
-  <body oncontextmenu="return false;" onkeydown="return false;">
+  <body>
     <div id="loading" class="text-center" style="height: 100vh">
-      <img src="./img/loading.gif" />
+      <img src="./img/loading.gif" alt="gifCat"/>
     </div>
     <div
       class="container flex-column justify-content-center align-items-center"
@@ -22,8 +22,9 @@
       <button class="btn btn-danger mt-5">Get New Images</button>
       <div
         id="cardDiv"
-        class="d-flex justify-content-center align-items-center flex-wrap my-5 g-1"
-      ></div>
+        class="d-flex justify-content-center align-items-center flex-wrap my-5 g-1">
+        
+      </div>
     </div>
 
     <script src="app.js"></script>
