--- a/js15_checkout-app/checkout.html
+++ b/js15_checkout-app/checkout.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -18,14 +18,14 @@
   <body>
     <header><h1>Checkout App</h1></header>
     <nav>
-      <div class="my-cart">My Cart</div>
+      <div class="my-cart">My Shopping Cart</div>
       <div class="delete-div">
         Delete Products <i class="fa-regular fa-trash-can"></i>
       </div>
     </nav>
     <main>
       <section class="product-list">
-        <h2 class="store"><small>Store:</small> ClarusStore</h2>
+        <h2 class="store"><small>Store:</small> KADIRIZM-STORE</h2>
         <article class="products">
           <div class="product">
             <figure><img src="./img/mac.jpg" alt="img" /></figure>
@@ -54,7 +54,7 @@
             <div class="product-info">
               <h2>Apple Keyboard</h2>
               <div class="product-prices">
-                <strong class="dollar" id="discounted-price">185.99</strong>
+                <strong class="dollar" id="discounted-price">105.99</strong>
                 <span class="line-through dollar">199.99</span>
               </div>
               <div class="buttons-div">
@@ -66,17 +66,17 @@
                   </div>
                   <i class="fa-regular fa-trash-can"></i>
                 </div>
-                <div class="dollar" id="product-price">185.99</div>
+                <div class="dollar" id="product-price">105.99</div>
               </div>
             </div>
           </div>
           <div class="product">
-            <figure><img src="./img/keyboard.jpg" alt="img" /></figure>
+            <figure><img src="./img/mouse.jpg" alt="img" /></figure>
             <div class="product-info">
               <h2>Apple Keyboard</h2>
               <div class="product-prices">
-                <strong class="dollar" id="discounted-price">185.99</strong>
-                <span class="line-through dollar">199.99</span>
+                <strong class="dollar" id="discounted-price">85.99</strong>
+                <span class="line-through dollar">129.99</span>
               </div>
               <div class="buttons-div">
                 <div>
@@ -87,7 +87,7 @@
                   </div>
                   <i class="fa-regular fa-trash-can"></i>
                 </div>
-                <div class="dollar" id="product-price">185.99</div>
+                <div class="dollar" id="product-price">85.99</div>
               </div>
             </div>
           </div>
